--- a/include/upgrade/node_preflight.yaml
+++ b/include/upgrade/node_preflight.yaml
@@ -1,5 +1,21 @@
 - name: verify nodes to upgrade are ready in k8s
+  kubernetes.core.k8s_info:
+    kubeconfig: "{{ installer_dir }}/auth/kubeconfig"
+    validate_certs: false
+    api_version: v1
+    kind: Node
+    name: "{{ inventory_hostname }}"
+    wait: true
+    wait_condition:
+      type: Ready
+    wait_timeout: 10
+  delegate_to: localhost
 
 - name: verify nodes to upgrade are reaachable
+  ansible.builtin.wait_for_connection:
+    delay: 0
+    timeout: 30
+  when: upgrade_require_node_connection|default(True)
 
 - name: run firmware plugin preflight
+  ansible.builtin.include_tasks: "include/firmware/{{ firmware_update_method }}/preflight.yaml"
