--- a/include/upgrade/cluster_preflight.yaml
+++ b/include/upgrade/cluster_preflight.yaml
@@ -2,12 +2,65 @@
 # Will set control_plane_upgrade_required to true or false
 
 - name: fail if target version is not set
+  ansible.builtin.assert:
+    that: "target_version is defined"
 
-- name: get current control plane version
+- name: verify kuebconfig file exists
+  ansible.builtin.stat:
+    path: "{{ installer_dir }}/auth/kubeconfig"
+  register: kubeconfig_stat
+
+- name: fail if kubeconfig file does not exist
+  ansible.builtin.fail:
+    msg: "Could not locate kubeconfig file at {{ installer_dir }}/auth/kubeconfig"
+  when: kubeconfig_stat.stat.exists == false
+
+- name: get current clusterversion object
+  kubernetes.core.k8s_info:
+    kubeconfig: "{{ installer_dir }}/auth/kubeconfig"
+    validate_certs: false
+    api_version: config.openshift.io/v1
+    kind: ClusterVersion
+    name: version
+  register: cluster_version_obj
+
+- name: ensure cluster version operator is in upgradeable state
+  kubernetes.core.k8s_info:
+    kubeconfig: "{{ installer_dir }}/auth/kubeconfig"
+    validate_certs: false
+    api_version: config.openshift.io/v1
+    kind: ClusterVersion
+    name: version
+    wait: true
+    wait_condition:
+      type: Upgradeable
+    wait_sleep: 5
+    wait_timeout: 60
 
 - name: warn if target version is a release image
+  ansible.builtin.debug:
+    msg: "Directly using release images as the target version should only be done for testing! No validation will be performed on the target version!"
+  when: target_version_type == "image"
 
-- name: verify that target version is available
+- name: create empty available_versions list
+  set_fact:
+    available_ocp_versions: []
+
+- name: register current cluster version
+  set_fact:
+    current_cluster_version: "{{ cluster_version_obj.resources.0.status.desired.version }}"
+
+- name: register available updates
+  set_fact:
+    available_updates: "{{ cluster_version_obj.resources.0.status.availableUpdates|default([], True) }}"
+
+- name: debug current version
+  debug:
+    var: current_cluster_version
+
+- name: debug available updates
+  debug:
+    var: available_updates
 
 - name: set control_plane_upgrade_required for version match
   set_fact:
@@ -18,3 +71,13 @@
   set_fact:
     control_plane_upgrade_required: true
   when: target_version != current_cluster_version
+
+- name: get available versions from clusterversion object
+  set_fact:
+    available_ocp_versions: "{{ available_ocp_versions + [item.version|default(None)] }}"
+  loop: "{{ available_updates }}"
+
+- name: verify that target version is available
+  ansible.builtin.fail:
+    msg: "Desired version is not in the list of available updates"
+  when: target_version_type == "channel" and target_version not in available_ocp_versions
