--- a/include/upgrade/control_plane.yaml
+++ b/include/upgrade/control_plane.yaml
@@ -25,7 +25,7 @@
       apiVersion: machineconfiguration.openshift.io/v1
       kind: MachineConfigPool
       metadata:
-        name: "{{ item.metadata.name }}"
+        name: "{{ item }}"
       spec:
         paused: false
   loop: "{{ control_plane_mcp_list }}"
@@ -37,30 +37,17 @@
 
 - name: set target version
   ansible.builtin.shell:
-    cmd: "{{ bin_dir }}/oc adm upgrade --kubeconfig={{ installer_dir }}/auth/kubeconfig --to={{ target_version }} {{ ocp_upgrade_flags|default("") }}" 
+    cmd: '{{ bin_dir }}/oc adm upgrade --kubeconfig={{ installer_dir }}/auth/kubeconfig --to={{ target_version }} {{ ocp_upgrade_flags|default("") }}' 
   when: target_version_type == "channel"
 
 - name: set target release imagea
   ansible.builtin.shell:
-    cmd: "{{ bin_dir }}/oc adm upgrade --kubeconfig={{ installer_dir }}/auth/kubeconfig --to-image={{ target_version }} {{ ocp_upgrade_flags|default("") }}" 
+    cmd: '{{ bin_dir }}/oc adm upgrade --kubeconfig={{ installer_dir }}/auth/kubeconfig --to-image={{ target_version }} {{ ocp_upgrade_flags|default("") }}' 
   when: target_version_type == "image"
 
 - name: wait one minute for cluster version operator to begin rollout
   ansible.builtin.pause:
     minutes: 1
-
-- name: wait for cluster version available
-  kubernetes.core.k8s_info:
-    kubeconfig: "{{ installer_dir }}/auth/kubeconfig"
-    validate_certs: false
-    api_version: config.openshift.io/v1
-    kind: ClusterVersion
-    name: version
-    wait: true
-    wait_condition:
-      type: "Available"
-    wait_sleep: 60
-    wait_delay: 7200
 
 - name: wait for cluster version not progressing
   kubernetes.core.k8s_info:
@@ -73,8 +60,22 @@
     wait_condition:
       type: "Progressing"
       status: "False"
+    wait_sleep: 60
+    wait_timeout: 7200
+
+- name: wait for cluster version available
+  kubernetes.core.k8s_info:
+    kubeconfig: "{{ installer_dir }}/auth/kubeconfig"
+    validate_certs: false
+    api_version: config.openshift.io/v1
+    kind: ClusterVersion
+    name: version
+    wait: true
+    wait_condition:
+      type: "Available"
+      status: "True"
     wait_sleep: 10
-    wait_delay: 1200
+    wait_timeout: 1200
 
 - name: wait for all control plane machine config pools to update
   kubernetes.core.k8s_info:
@@ -86,7 +87,7 @@
     wait_condition:
       type: Updated
     wait_sleep: 30
-    wait_delay: 1200
+    wait_timeout: 1200
 
 - name: run post-upgrade hook
   ansible.builtin.include_tasks: "hooks/post_cluster_upgrade.yaml"
