--- a/include/firmware/hpe_oneview/post_update.yaml
+++ b/include/firmware/hpe_oneview/post_update.yaml
@@ -1,3 +1,18 @@
 - name: wait for OS to be online
+  wait_for_connection:
+    delay: 120
+    timeout: 900
 
 - name: wait for k8s node to be ready
+  kubernetes.core.k8s_info:
+    kubeconfig: "{{ installer_dir }}/auth/kubeconfig"
+    validate_certs: false
+    api_version: v1
+    kind: Node
+    name: "{{ inventory_hostname }}"
+    wait: true
+    wait_condition:
+      type: Ready
+    wait_timeout: 600
+  delegate_to: localhost
+
