--- a/include/firmware/hpe_oneview/post_update.yaml
+++ b/include/firmware/hpe_oneview/post_update.yaml
@@ -16,3 +16,14 @@
     wait_timeout: 600
   delegate_to: localhost
 
+- name: uncordon node so MCO will update it
+  kubernetes.core.k8s_drain:
+    kubeconfig: "{{ installer_dir }}/auth/kubeconfig"
+    state: uncordon
+    name: "{{ inventory_hostname }}"
+  register: uncordon_result
+  until: uncordon_result is not failed
+  retries: 5
+  delay: 10
+  delegate_to: localhost
+
