Add hpe_spp firmware update method

--- a/prepare_utility_host.yml
+++ b/prepare_utility_host.yml
@@ -21,6 +21,17 @@
         dest: "{{bin_dir}}"
         state: directory
 
+    - name: Create local build directory
+      file:
+        dest: "{{bin_dir}}"
+        state: directory
+
+    - name: Run prep tasks for firmware update methods
+      ansible.builtin.include_tasks: "include/firmware/{{ fw_module }}/utility_host_prep.yaml"
+      loop: "{{ enabled_firmware_modules }}"
+      loop_control:
+        loop_var: fw_module
+
     - name: Fetch openshift-install binary
       get_url:
         url: "{{source_urls['installer']}}"
