--- a/include/upgrade/cluster_preflight.yaml
+++ b/include/upgrade/cluster_preflight.yaml
@@ -37,12 +37,6 @@
     wait_sleep: 5
     wait_timeout: 60
 
-- name: fail if cluster version operator has non-uprgadeable status
-  ansible.builtin.fail:
-    msg: "Cluster version operator is non-upgradeable"
-  when: item.type == 'Upgradeable' and item.status == 'False'
-  loop: '{{ cluster_version_obj.resources.0.status.conditions }}'
-
 - name: warn if target version is a release image
   ansible.builtin.debug:
     msg: "Directly using release images as the target version should only be done for testing! No validation will be performed on the target version!"
@@ -87,3 +81,10 @@
   ansible.builtin.fail:
     msg: "Desired version is not in the list of available updates"
   when: target_version_type == "channel" and target_version not in available_ocp_versions
+
+- name: fail if cluster version operator has non-uprgadeable status
+  ansible.builtin.fail:
+    msg: "Cluster version operator is non-upgradeable"
+  when: item.type == 'Upgradeable' and item.status == 'False' and control_plane_upgrade_required == true
+  loop: '{{ cluster_version_obj.resources.0.status.conditions }}'
+
