Add community.docker for ansible 2.12

--- a/collections/requirements.yml
+++ b/collections/requirements.yml
@@ -1,6 +1,7 @@
 ---
 collections:
   - name: community.general
+  - name: community.docker
   - name: kubernetes.core
   - name: dellemc.openmanage
   - name: ansible.posix
