--- a/upgrade_cluster.yaml
+++ b/upgrade_cluster.yaml
@@ -8,6 +8,7 @@
   tasks:
     - name: include cluster preflight tasks
       ansible.builtin.include_tasks: "include/upgrade/cluster_preflight.yaml"
+      when: fw_upgrade_only != true
 
 - name: Node upgrade preflight
   hosts: openshift_nodes
@@ -32,147 +33,20 @@
   tasks:
     - name: include control plane upgrade tasks
       ansible.builtin.include_tasks: "include/upgrade/control_plane.yaml"
-      when: control_plane_upgrade_required == true
+      when: fw_upgrade_only != true and control_plane_upgrade_required == true
 
-- name: Node group 1 firmware upgrade
+- name: Loop over node groups
   hosts: openshift_nodes
-  serial: 32
   gather_facts: false
+  serial: "{{ node_update_serial|default(32) }}"
   vars:
-    active_node_group: 1
     target_node_groups: []
   tasks:
-    - name: include node upgrade tasks for node group
-      include_tasks: "include/upgrade/upgrade_worker_node.yaml"
-      when: node_group is defined and node_group in target_node_groups and node_group == active_node_group and firmware_update_required == true
-
-- name: Node group 1 OCP upgrade
-  hosts: utility
-  gather_facts: false
-  vars:
-    active_node_group: 1
-    target_node_groups: []
-  tasks:
-    - name: include machine pool upgrade tasks
-      ansible.builtin.include_tasks: "include/upgrade/upgrade_worker_group.yaml"
-      when: active_node_group in target_node_groups and control_plane_upgrade_required == true
-
-- name: Node group 1 upgrade cleanup
-  hosts: openshift_nodes
-  serial: 32
-  gather_facts: false
-  vars:
-    active_node_group: 1
-    target_node_groups: []
-  tasks:
-    - name: include node cleanup tasks for node group
-      include_tasks: "include/upgrade/node_cleanup.yaml"
-      when: node_group is defined and node_group in target_node_groups and node_group == active_node_group 
-
-- name: Node group 2 firmware upgrade
-  hosts: openshift_nodes
-  serial: 32
-  gather_facts: false
-  vars:
-    active_node_group: 2
-    target_node_groups: []
-  tasks:
-    - name: include node upgrade tasks for node group
-      include_tasks: "include/upgrade/upgrade_worker_node.yaml"
-      when: node_group is defined and node_group in target_node_groups and node_group == active_node_group and firmware_update_required == true
-
-- name: Node group 2 OCP upgrade
-  hosts: utility
-  gather_facts: false
-  vars:
-    active_node_group: 2
-    target_node_groups: []
-  tasks:
-    - name: include machine pool upgrade tasks
-      ansible.builtin.include_tasks: "include/upgrade/upgrade_worker_group.yaml"
-      when: active_node_group in target_node_groups and control_plane_upgrade_required == true
-
-- name: Node group 2 upgrade cleanup
-  hosts: openshift_nodes
-  serial: 32
-  gather_facts: false
-  vars:
-    active_node_group: 2
-    target_node_groups: []
-  tasks:
-    - name: include node cleanup tasks for node group
-      include_tasks: "include/upgrade/node_cleanup.yaml"
-      when: node_group is defined and node_group in target_node_groups and node_group == active_node_group
-
-- name: Node group 3 firmware upgrade
-  hosts: openshift_nodes
-  serial: 32
-  gather_facts: false
-  vars:
-    active_node_group: 3
-    target_node_groups: []
-  tasks:
-    - name: include node upgrade tasks for node group
-      include_tasks: "include/upgrade/upgrade_worker_node.yaml"
-      when: node_group is defined and node_group in target_node_groups and node_group == active_node_group and firmware_update_required == true
-
-- name: Node group 3 OCP upgrade
-  hosts: utility
-  gather_facts: false
-  vars:
-    active_node_group: 3
-    target_node_groups: []
-  tasks:
-    - name: include machine pool upgrade tasks
-      ansible.builtin.include_tasks: "include/upgrade/upgrade_worker_group.yaml"
-      when: active_node_group in target_node_groups and control_plane_upgrade_required == true
-
-- name: Node group 3 upgrade cleanup
-  hosts: openshift_nodes
-  serial: 32
-  gather_facts: false
-  vars:
-    active_node_group: 3
-    target_node_groups: []
-  tasks:
-    - name: include node cleanup tasks for node group
-      include_tasks: "include/upgrade/node_cleanup.yaml"
-      when: node_group is defined and node_group in target_node_groups and node_group == active_node_group
-
-- name: Node group 4 firmware upgrade
-  hosts: openshift_nodes
-  serial: 32
-  gather_facts: false
-  vars:
-    active_node_group: 4
-    target_node_groups: []
-  tasks:
-    - name: include node upgrade tasks for node group
-      include_tasks: "include/upgrade/upgrade_worker_node.yaml"
-      when: node_group is defined and node_group in target_node_groups and node_group == active_node_group and firmware_update_required == true
-
-- name: Node group 4 OCP upgrade
-  hosts: utility
-  gather_facts: false
-  vars:
-    active_node_group: 4
-    target_node_groups: []
-  tasks:
-    - name: include machine pool upgrade tasks
-      ansible.builtin.include_tasks: "include/upgrade/upgrade_worker_group.yaml"
-      when: active_node_group in target_node_groups and control_plane_upgrade_required == true
-
-- name: Node group 4 upgrade cleanup
-  hosts: openshift_nodes
-  serial: 32
-  gather_facts: false
-  vars:
-    active_node_group: 4
-    target_node_groups: []
-  tasks:
-    - name: include node cleanup tasks for node group
-      include_tasks: "include/upgrade/node_cleanup.yaml"
-      when: node_group is defined and node_group in target_node_groups and node_group == active_node_group
+    - name: include node group update tasks
+      ansible.builtin.include_tasks: "include/upgrade/_node_upgrade_loop.yaml"
+      loop_control:
+        loop_var: active_node_group
+      loop: "{{ target_node_groups }}"
 
 - name: Cluster upgrade cleanup
   hosts: utility
