--- a/include/firmware/hpe_spp/utility_host_prep.yaml
+++ b/include/firmware/hpe_spp/utility_host_prep.yaml
@@ -1,4 +1,4 @@
-# These steps will be run during the prepare_utility_host playbook
+# These steps will be run during the prepare_provisioner_host playbook
 # and generally will prepare shared resources for firmware updates
 
 # For HPE SPP, this will download all of the configured baselines and prepare
