--- a/include/coreos_build_iso.yaml
+++ b/include/coreos_build_iso.yaml
@@ -43,7 +43,7 @@
       {% if live_ignition_file.stat.exists %}
       --live-ignition /data/combined-ignition.ign \
       {% endif %}
-      --live-karg-append coreos.live.rootfs_url={{utility_http_scheme}}://{{utility_host}}:{{utility_http_port}}/{{cluster_name}}/rhcos-rootfs.img \
+      --live-karg-append coreos.live.rootfs_url={{provisioner_http_scheme}}://{{provisioner_host}}:{{provisioner_http_port}}/{{cluster_name}}/rhcos-rootfs.img \
       --live-karg-append {{ coreos_kernel_args|join(' --live-karg-append ') }} \
       {% if enable_kargs_in_dest %}
       --dest-karg-append {{ coreos_kernel_args|join(' --dest-karg-append ') }}
@@ -68,8 +68,8 @@
       {% if not live_ignition_file.stat.exists and not enable_kargs_in_dest %}
       -a coreos.inst.install_dev={{deploy_disk}} \
       {% endif %}
-      -a coreos.inst.ignition_url={{utility_http_scheme}}://{{utility_host}}:{{utility_http_port}}/{{cluster_name}}/{{role}}.ign \
-      -a {{ coreos_kernel_args|join(' -a ') }} 
+      -a coreos.inst.ignition_url={{provisioner_http_scheme}}://{{provisioner_host}}:{{provisioner_http_port}}/{{cluster_name}}/{{role}}.ign \
+      -a {{ coreos_kernel_args|join(' -a ') }}
 
   become: true
   delegate_to: localhost
@@ -88,7 +88,7 @@
       {{coreos_installer_image}} \
       iso ignition embed /iso/{{inventory_hostname}}.iso \
       -f \
-      -i /data/combined-ignition.ign 
+      -i /data/combined-ignition.ign
 
   become: true
   delegate_to: localhost
