--- a/include/firmware/noop/utility_host_prep.yaml
+++ b/include/firmware/noop/utility_host_prep.yaml
@@ -1,3 +1,2 @@
-# These steps will be run during the prepare_utility_host playbook
+# These steps will be run during the prepare_provisioner_host playbook
 # and generally will prepare shared resources for firmware updates
-
